Update swagger definition for message patch and make it start to work under the hood
